// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserCard Component > Snapshot Tests > should match snapshot with full person data 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm overflow-hidden"
>
  <div
    class="p-4 flex flex-col items-center text-center"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-16 w-16 text-base"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full bg-muted"
      >
        JS
      </span>
    </span>
    <div
      class="flex-1 mt-4"
    >
      <div
        class="space-y-1"
      >
        <h3
          class="font-semibold text-lg leading-none"
        >
          Jane Smith
        </h3>
        <p
          class="text-sm text-muted-foreground italic"
        >
          (
          she/her
          )
        </p>
      </div>
      <p
        class="mt-2 text-sm text-muted-foreground line-clamp-2"
      >
        Software engineer and educator passionate about technology and learning.
      </p>
      <div
        class="mt-3 space-y-2 flex flex-col items-center"
      >
        <div
          class="flex items-center gap-2 text-sm text-muted-foreground"
        >
          <svg
            class="lucide lucide-mail h-4 w-4 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="16"
              rx="2"
              width="20"
              x="2"
              y="4"
            />
            <path
              d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"
            />
          </svg>
          <span
            class="truncate"
          >
            jane.smith@example.com
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-sm text-muted-foreground"
        >
          <svg
            class="lucide lucide-phone h-4 w-4 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"
            />
          </svg>
          <span
            class="truncate"
          >
            +1-555-123-4567
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserCard Component > Snapshot Tests > should match snapshot with horizontal layout 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm overflow-hidden"
>
  <div
    class="p-4 flex items-center gap-4"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-16 w-16 text-base"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full bg-muted"
      >
        JS
      </span>
    </span>
    <div
      class="flex-1 text-left"
    >
      <div
        class="space-y-1"
      >
        <h3
          class="font-semibold text-lg leading-none"
        >
          Jane Smith
        </h3>
      </div>
      <div
        class="mt-3 space-y-2"
      >
        <div
          class="flex items-center gap-2 text-sm text-muted-foreground"
        >
          <svg
            class="lucide lucide-mail h-4 w-4 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="16"
              rx="2"
              width="20"
              x="2"
              y="4"
            />
            <path
              d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"
            />
          </svg>
          <span
            class="truncate"
          >
            jane.smith@example.com
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-sm text-muted-foreground"
        >
          <svg
            class="lucide lucide-phone h-4 w-4 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"
            />
          </svg>
          <span
            class="truncate"
          >
            +1-555-123-4567
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserCard Component > Snapshot Tests > should match snapshot with minimal data 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm overflow-hidden"
>
  <div
    class="p-4 flex flex-col items-center text-center"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-16 w-16 text-base"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full bg-muted"
      >
        TU
      </span>
    </span>
    <div
      class="flex-1 mt-4"
    >
      <div
        class="space-y-1"
      >
        <h3
          class="font-semibold text-lg leading-none"
        >
          Test User
        </h3>
      </div>
    </div>
  </div>
</div>
`;
